--- a/package.json
+++ b/package.json
@@ -9,22 +9,20 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^10.0.0",
-    "ex-react-native-i18n": "^0.0.5",
     "expo": "^32.0.6",
     "native-base": "^2.12.1",
     "react": "^16.8.4",
     "react-native": "^0.57.8",
     "react-navigation": "^3.3.2",
-    "react-redux": "^6.0.1"
+    "react-redux": "^6.0.1",
+    "react-i18next@legacy": "^v9.0.10"
   },
   "devDependencies": {
-    "@types/ex-react-native-i18n": "^0.0.0",
     "@types/expo": "^32.0.7",
     "@types/react": "^16.8.8",
     "@types/react-native": "^0.57.40",
     "@types/react-redux": "^7.0.3",
     "babel-preset-expo": "^5.0.0",
-    "ex-react-native-i18n-ts": "^0.0.6",
     "prettier": "1.16.4",
     "tslint-config-prettier": "1.18.0",
     "typescript": "^3.3.3333"
