--- a/package.json
+++ b/package.json
@@ -9,18 +9,20 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^10.0.0",
+    "@types/i18n-js": "^3.0.1",
     "expo": "^32.0.6",
+    "i18n-js": "^3.2.1",
     "native-base": "^2.12.1",
     "react": "^16.8.4",
     "react-native": "^0.57.8",
     "react-navigation": "^3.3.2",
-    "react-redux": "^6.0.1",
-    "react-i18next@legacy": "^v9.0.10"
+    "react-redux": "^6.0.1"
   },
   "devDependencies": {
     "@types/expo": "^32.0.7",
     "@types/react": "^16.8.8",
     "@types/react-native": "^0.57.40",
+    "@types/react-navigation": "^3.0.5",
     "@types/react-redux": "^7.0.3",
     "babel-preset-expo": "^5.0.0",
     "prettier": "1.16.4",
