--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/react-redux": "^7.0.3",
     "babel-preset-expo": "^5.0.0",
     "prettier": "1.16.4",
+    "redux-devtools-extension": "^2.13.8",
     "tslint-config-prettier": "1.18.0",
     "typescript": "^3.3.3333"
   },
