--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^10.0.0",
-    "@types/i18n-js": "^3.0.1",
+    "color": "^3.1.0",
     "expo": "^32.0.6",
     "i18n-js": "^3.2.1",
+    "lodash": "^4.17.11",
     "native-base": "^2.12.1",
     "react": "^16.8.4",
     "react-native": "^0.57.8",
@@ -19,7 +20,9 @@
     "react-redux": "^6.0.1"
   },
   "devDependencies": {
+    "@types/color": "^3.0.0",
     "@types/expo": "^32.0.7",
+    "@types/i18n-js": "^3.0.1",
     "@types/react": "^16.8.8",
     "@types/react-native": "^0.57.40",
     "@types/react-navigation": "^3.0.5",
