--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/react-native": "^0.57.40",
     "@types/react-navigation": "^3.0.5",
     "@types/react-redux": "^7.0.3",
+    "babel-plugin-module-resolver": "^3.2.0",
     "babel-preset-expo": "^5.0.0",
     "prettier": "1.16.4",
     "redux-devtools-extension": "^2.13.8",
